Trying to fix unwanted scroll on ios

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -161,7 +161,11 @@ html, body {
     height: 100%;
     padding: 0px;
     overflow-x: hidden;
+    overflow-y: hidden;
     background-color: white;
+}
+body {
+    position: relative;
 }
 
 .red-alert-button {
